java/java.hints/test/unit/data/goldenfiles/org/netbeans/modules/java/hints/errors/ErrorHintsTest/testDoNotProposeCreateField1-hints.pass
Add import for java.util.List
Add import for java.awt.List
